tests/invalid/math_log_keyword_arg/main.py
import math

if __name__ == "__main__":
    x: float = math.log(x=1.0)
